--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,87 @@
-#name {
-  font-size: 24px;
-  background-color: #4aaaa5;
-  color: white;
-  text-align: center;
-}
-body {
-  margin: 0px;
+.no-gutters {
+  border-bottom: 2px solid lightslategray;
 }
 
-#navbar {
+body {
+  height: 100%;
+}
+
+.main-container {
+  flex: 1 0 auto;
+}
+
+#header2 {
   background-color: white;
 }
+#navbar {
+  background-color: white;
+  position: relative;
+}
 
-#nav {
+.navbar-brand {
+  background-color: #4aaaa5;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  position: relative;
+}
+
+.nav-link {
   color: gray;
+  display: flex;
 }
 
 #Video {
+  position: fixed;
+  top: 0;
+  left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
+  z-index: -100;
+  overflow: hidden;
 }
 
-.container {
+.aboutme-container {
+  width: 100%;
   position: relative;
+  background-color: white;
+  border: 2px solid lightslategray;
+}
+.aboutmecontent {
+  width: 95%;
+  display: inline-block;
+  position: relative;
+  margin: 20px;
+  background-color: white;
+}
+
+h2 {
+  margin-top: 15px;
+  padding-bottom: 20px;
+  text-align: left;
+  font-weight: bold;
+  font-size: 23px;
+  color: #4aaaa5;
+  width: 100%;
+  border-bottom: 2px solid gray;
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+}
+
+#paul {
+  float: left;
+  margin: 20px 20px 0px 0px;
+}
+
+.bio-description {
+  margin: 30px 0px 0px 0px;
+  line-height: 2;
+  text-align: left;
+  font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+}
+
+#sticky-footer {
+  border-top: 8px solid #4aaaa5;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
